fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,11 @@ body {
  background-color: hsl(212, 45%, 89%);
  color: hsl(218, 44%, 22%);
  margin: 0;
- padding: 20%;
+ padding: 8%;
  display: flex;
  justify-content: center;
  align-items: center;
- height: 100vh;
+
  main {
   display: flex;
   justify-content: center;
